Метод .of [#70623 #8911]