@@ -5,7 +5,6 @@ import java.util.Comparator;
 import static org.hamcrest.Matchers.lessThan;
 import static org.junit.Assert.assertThat;
 import static org.hamcrest.core.Is.is;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Collections;
 
@@ -23,14 +22,14 @@ public class JobTest {
 
     @Test
     public void sortJobNameUpTest() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = List.of(
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 4),
                 new Job("X task", 0),
                 new Job("Fix bug", 2)
         );
         Collections.sort(jobs, new SortJobNameUp());
-        List<Job> expect = Arrays.asList(
+        List<Job> expect = List.of(
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 4),
                 new Job("Fix bug", 2),
@@ -41,14 +40,14 @@ public class JobTest {
 
     @Test
     public void sortJobNameDownTest() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = List.of(
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 4),
                 new Job("X task", 0),
                 new Job("Fix bug", 2)
         );
         Collections.sort(jobs, new SortJobNameDown());
-        List<Job> expect = Arrays.asList(
+        List<Job> expect = List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 4),
@@ -59,14 +58,14 @@ public class JobTest {
 
     @Test
     public void sortJobPrUpTest() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = List.of(
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 4),
                 new Job("Fix bug", 2),
                 new Job("X task", 0)
         );
         Collections.sort(jobs, new SortJobPrUp());
-        List<Job> expect = Arrays.asList(
+        List<Job> expect = List.of(
                 new Job("X task", 0),
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 2),
@@ -77,14 +76,14 @@ public class JobTest {
 
     @Test
     public void sortJobPrDownTest() {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = List.of(
                 new Job("Fix bug", 1),
                 new Job("Fix bug", 4),
                 new Job("Fix bug", 2),
                 new Job("X task", 0)
         );
         Collections.sort(jobs, new SortJobPrDown());
-        List<Job> expect = Arrays.asList(
+        List<Job> expect = List.of(
                 new Job("Fix bug", 4),
                 new Job("Fix bug", 2),
                 new Job("Fix bug", 1),
